public_html/static/css/style.css
/* ... */
#keepitsimple{background:#3850cc;background:-webkit-linear-gradient(left,#3230a0, #4895ff 70%,#aabbff);background:linear-gradient(90deg,#3230a0, #4895ff 70%,#aabbff);color:#fff;position:relative;}
#keepitsimple .title{font-size:2em;text-align:center;padding:7em 5px;}
#keepitsimple .title h2{font-weight:400;font-size:3em;margin-bottom:0;position:relative;margin-bottom:1em;}
#keepitsimple .title h2:after{content:"";position:absolute;bottom:0;right:0;left:0;width:50px;height:1px;margin:0 auto;background-color:#ddd;transition:0.3s;}
#keepitsimple:hover .title h2:after{background-color:#fff;width:100px;}
#keepitsimple .title h3{font-weight:100;font-size:1em;color:#eee;}
#keepitsimple .title h3 span{opacity:0;transition:0.3s}
#keepitsimple .title h3:hover span{opacity:1}


#statistic{padding:7em 0;background-color:#333;color:#eee}
#statistic .value{color:#fff}
#statistic h2 span{opacity:0;transition:0.3s}
#statistic:hover h2 span{opacity:1}






/* footer*/
#tfooter{font-size:1.2em;padding:3rem 0 0;background-color:#333;}
#tfooter a{color:#888;transition:0.3s;}
#tfooter nav a:hover{color:#eee}
#tfooter nav a:focus{color:#fff}
/* footer top nav*/
#tfooter .top{border-bottom:1px solid #4070c0;font-size:1.3em;font-weight:900;position:relative}
#tfooter .top a{display:inline-block;padding:1.2em .5em;color:#aaa;margin-right:1.5em;}
.rtl #tfooter .top a{margin-right:0;margin-left:1.5em}
/* footer-links*/
#tfooter .middle{font-size:1.2em;border-bottom:1px solid #4070c0;padding:2em 0}
#tfooter .middle h4{font-weight:500;color:#ccc;margin-bottom:5px;font-size:1.1em}
#tfooter .middle nav a{display:block;padding:0.5em}
#tfooter .middle .enamad{min-width:150px;padding:1em 0}
#tfooter .middle .enamad a{display:block;max-width:90px;padding:0;position:relative;}
#tfooter .middle .enamad a:focus{background-color:#ccc}
#tfooter .middle .enamad img{display:block;max-width:100%;background-color:#eee;padding:0.5em 0}
#tfooter .middle .enamad a:before{content:"";position:absolute;top:-4px;right:0;left:0;height:4px;background-image:url(../images/cert/footer-box.svg);background-repeat:repeat-x;}
#tfooter .middle .enamad a:after{content:"";position:absolute;bottom:-4px;right:0;left:0;height:4px;background-image:url(../images/cert/footer-box.svg);background-repeat:repeat-x;-webkit-transform:rotate(180deg);transform:rotate(180deg)}
/* footer-note*/
#tfooter .bottom{padding:2em 0;color:#aaa}
#tfooter .bottom .langlist{display:inline-block}
#tfooter .bottom .langlist a{background-color:rgba(0,0,0,0.1);color:#aaa;padding:1em 2em;display:inline-block;-webkit-transition:.3s;-o-transition:.3s;-moz-transition:.3s;transition:.3s;border-radius:2px}
#tfooter .bottom .langlist a:hover,#tfooter .bottom .langlist a:focus{background-color:rgba(0,0,0,0.4);color:#ddd;}
#tfooter .bottom .love{text-align:right;text-transform:uppercase}
#tfooter .bottom .love a:hover,#tfooter .bottom .love a:focus{color:#fff}
#tfooter .bottom .counter{font-weight:700;text-align:center;text-transform:uppercase}
#tfooter .bottom{display:-webkit-box;display:-webkit-flex;display:-moz-box;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-webkit-flex-direction:row;-moz-box-orient:horizontal;-moz-box-direction:normal;-ms-flex-direction:row;flex-direction:row}
#tfooter .bottom .counter,#tfooter .bottom .love{padding:1em 0}
.rtl #tfooter .bottom .love{text-align:left}
/* xaccess*/
#tfooter #xaccess{position:fixed;left:0;bottom:17%;z-index:3;}
#tfooter #xaccess a{display:block;background-color:#000;opacity:0.3;padding:0.5em 1em;transition:0.3s;margin-top:0.2em;margin-right:2em;color:#fff;}
#tfooter #xaccess a:hover{opacity:0.8;padding:0.5em 2em;margin-right:0;}
.rtl #tfooter #xaccess{right:0;left:initial;}
.rtl #tfooter #xaccess a{right:0;left:initial;margin-right:0;margin-left:2em;}
.rtl #tfooter #xaccess a:hover{margin-right:0;margin-left:0;}

#tfooter .middle .share1 a{display:inline-block;}


.pricingTable{text-align:center;color:#888;font-size:1.2em}
.pricingTable .price .c{font-weight:500;color:#333}
.ltr .pricingTable .c4, .ltr .pricingTable .c12{text-align:left}
.rtl .pricingTable .c4, .rtl .pricingTable .c12{text-align:right;}
.pricingTable sup{font-size:0.6em;padding:0 0.3em;}
.pricingTable small{color:#777;font-size:0.6em;}
body .pc .em{font-weight:bold;text-align:center;padding:1em 5%;background-color:#ddd;}
  /* pricing */
.dtc > div{transition:0.3s;}
.dtc > div > *{padding:1em 1em;}
.dtc > .th{background-color:#e0d7c1;font-weight:700}
.dtc > .gh{font-weight:700;background-color:#d9dddd;margin-top:1em;}
.dtc > .th:hover{background-color:rgba(0,0,0,0.1);}
.dtc > .th.gh:hover{background-color:rgba(0,0,0,0.1)}
.dtc > div:not(.th):hover{background-color:rgba(0,0,0,0.05)}
.dtc > div a{color:#333;transition:0.3s;}
.dtc > div > *{padding:1rem .5rem;}



/*vcard*/
.vcard{font-style:normal;}
.vcard .adr{padding:1em 0}
.vcard .adr div, .vcard .adr span, .vcard .email, .vcard .tel{display:block;padding:0.5em}
.vcard .adr span{display:inline-block;}





[data-page="homepage"] #tfooter .link_home{display:none;}


#factorAdd .cbox{margin-bottom:10px;padding:0.5em}
#factorAdd .tbl{margin:0}
/*final price*/
.priceBox{font-size:1.4em;margin:0 auto 10px;padding:0;border-radius:0.25rem;background-color:#5bbbdb;color:#eee;text-align:center;max-width:400px;min-width:170px}
.priceBox h3{font-size:1em;padding:1em;margin:0}
.priceBox div span{font-weight:bold;color:#fff;display:inline-block;}
.priceBox div{transition:0.3s;}
.priceBox div:hover{color:#fff}
.priceBox .final{padding:0;background-color:#50a0c0;color:#fff;font-size:2.5em;margin-bottom:10px;height:70px;}
.priceBox .final span{line-height:70px;}
.priceBox .final abbr{font-size:1rem;display:inline-block;transform: rotate(-90deg);-webkit-transform: rotate(-90deg);-moz-transform: rotate(-90deg);vertical-align:middle;}
.priceBox .desc{padding:0.2em 0;color:#fff;font-size:1.1rem;margin-bottom:1em;font-weight:100}
.ltr .priceBox .desc{display:none;}
/* ... */

